Modificación tabla de bovinos

--- a/plataformaGestionPredial/src/app/list/list.component.css
+++ b/plataformaGestionPredial/src/app/list/list.component.css
@@ -1,4 +1,4 @@
-th{
+/*th{
     text-align: center;
 }
 tr{
@@ -6,7 +6,7 @@ tr{
 }
 thead{
     position: sticky !important;
-}
+}*/
 /* img{
     width: 50px !important;
     height: 50px !important;
