Se agrega orden en algunas columnas del listado de bovinos

--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -81,10 +81,11 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Image</th>
+                  <!--th scope="col" (sort)="onSort($event)" sortable="name">Name {{direccion=='asc'?'↑':'↓'}}</th--> 
                   <th scope="col" (sort)="onSort($event)" sortable="name">Name</th>
-                  <th scope="col" >DIIO</th>
-                  <th scope="col" >Date Placement</th>
-                  <th scope="col" >Date Birth</th>
+                  <th scope="col" (sort)="onSort($event)" sortable="diio">DIIO</th>
+                  <th scope="col" (sort)="onSort($event)" sortable="datePlacement">Date Placement</th>
+                  <th scope="col" (sort)="onSort($event)" sortable="dateBirth">Date Birth</th>
                   <th scope="col" >Mother</th>
                   <th scope="col" >Type</th>
                   <th scope="col" >Age<span class="badge" style="color: black;"></span></th>
