--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="centered">  
   <!-- <h1>Summarize</h1> -->
   <div id="div1" class="module">
-    <i class="fa-solid fa-cow fa-2xl"></i><label for="">48</label>
+    <i class="fa-solid fa-cow fa-2xl"></i><label for="">{{bovines.length}}</label>
   </div>
   <div id="div2" class="module">
     <i class="bi bi-files fa-2xl"></i><label for="">2</label>
   </div>
   <div id="div3" class="module">
-    <i class="bi bi-postcard fa-2xl"></i><label for="">50</label>
+    <i class="bi bi-postcard fa-2xl"></i><label for="">{{identifiers.length}}</label>
   </div>
   <div id="div4" class="module">
     <i class="fa-solid fa-handshake-simple fa-2xl"></i><label for="">0</label>
