actualización en dashboard

--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <i class="fa-solid fa-cow fa-2xl"></i><label for="">{{bovines.length}}</label>
   </div>
   <div id="div2" class="module">
-    <i class="bi bi-files fa-2xl"></i><label for="">2</label>
+    <i class="bi bi-files fa-2xl"></i><label for="">{{documents.length}}</label>
   </div>
   <div id="div3" class="module">
     <i class="bi bi-postcard fa-2xl"></i><label for="">{{identifiers.length}}</label>
