--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -25,6 +25,7 @@
     <ul>
        <li routerLink="/bovines" id="1"(click)="addClass(1)"><i class="fa-solid fa-list-ol"></i>List</li>
        <li routerLink="/bovines/create" id="2"(click)="addClass(2)"><i class="fa-solid fa-plus"></i>Create</li>
+       <li routerLink="/" id="13"(click)="addClass(13)"><i class="fa-solid fa-location-dot"></i>Distribution<span class="badge badge-secondary">PRO</span></li>
        <!-- <li routerLink="/bovines/delete" id="13"(click)="addClass(13)"><i class="fa-solid fa-minus"></i>Delete</li> -->
     </ul>
 </div>
