--- a/plataformaGestionPredial/src/app/login/login.component.html
+++ b/plataformaGestionPredial/src/app/login/login.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="form-group mb-2">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required placeholder="ej: 123456">
+                        <input type="password" class="form-control" id="password" name="password" required placeholder="eg: 123456">
                         <!-- <span class="small">Entre 5 a 10 carácteres alfanuméricos</span> -->
                     </div>
                     <div class="form-group" style="text-align: center">
