--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,22 @@
 <div class="centered">  
-  <!-- <h1>Summarize</h1> -->
+  <h3 style="text-align: center; color:green;">Summarize</h3> 
+  <!-- <div class="module">
+    <h1>Summarize</h1>
+  </div> -->
   <div id="div1" class="module">
+    <label for="">Module bovines:</label><br>
     <i class="fa-solid fa-cow fa-2xl"></i><label for="">{{bovines.length}}</label>
   </div>
   <div id="div2" class="module">
+   <label for="">Module documents:</label><br>  
     <i class="bi bi-files fa-2xl"></i><label for="">{{documents.length}}</label>
   </div>
   <div id="div3" class="module">
+    <label for="">Module identifiers:</label><br> 
     <i class="bi bi-postcard fa-2xl"></i><label for="">{{identifiers.length}}</label>
   </div>
   <div id="div4" class="module">
+    <label for="">Module business:</label><br> 
     <i class="fa-solid fa-handshake-simple fa-2xl"></i><label for="">0</label>
     <!-- <i class="fa-solid fa-box fa-2xl"></i><label for="">40</label> -->
   </div>
