--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -55,11 +55,26 @@
                         </div>
                         <div *ngIf="field.type=='text'" class="form-group mb-2">
                             <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
-                            <input type="text" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}">
+                            <input type="text" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:1000}}" maxlength="{{field.maxlength?field.maxlength:1000}}">
                             <div  *ngIf="i.invalid && (i.dirty || i.touched)">
                                 <div *ngIf="i.errors?.required">
                                     <p class="text-alert">{{field.name}} is required</p>
                                 </div>
+                            </div>
+                        </div>
+                        <div *ngIf="field.type=='numeric'" class="form-group mb-2">
+                            <label for="{{field.name}}">{{field.name}}<span *ngIf="field.required"> *</span></label>
+                            <input inputmode="numeric" oninput="this.value = this.value.replace(/\D+/g, '')" class="form-control"  id="{{field.name}}" [(ngModel)]="field.value" name="{{field.name}}" [required]="field.required" #i="ngModel" placeholder="{{field.placeholder}}" minlength="{{field.minlength?field.minlength:1000}}" maxlength="{{field.maxlength?field.maxlength:1000}}">
+                            <div  *ngIf="i.invalid && (i.dirty || i.touched)">
+                                <div *ngIf="i.errors?.required">
+                                    <p class="text-alert">{{field.name}} is required</p>
+                                </div>
+                            </div>
+                            <div *ngIf="i.errors?.minlength">
+                                <p class="text-alert">DIIO should be contains 9 numbers</p>
+                            </div>
+                            <div *ngIf="i.errors?.maxlength">
+                                <p class="text-alert">DIIO should be contains 9 numbers</p>
                             </div>
                         </div>
                         <div *ngIf="field.type=='select'" class="form-group mb-2">
