Se consume servicio usando eureka. Se avanza en implementación de tenants

--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -13,7 +13,8 @@
 <!-- VACUNOS -->
 <div class="row menu" (click)="changeOpenLinks(1)" >
     <div class="col-3">
-        <fa-icon [icon]="faCow" style="float: right;"></fa-icon>
+        <!-- <fa-icon [icon]="faCow" style="float: right;"></fa-icon> -->
+        <i class="fa-solid fa-cow"></i>
     </div>
     <div class="col-9">
         <a class="nav-link" >Bovines
