--- a/plataformaGestionPredial/src/app/identifiers/list-identifiers/list-identifiers.component.html
+++ b/plataformaGestionPredial/src/app/identifiers/list-identifiers/list-identifiers.component.html
@@ -1,1 +1,55 @@
-<app-table [data]="data" ></app-table>
+<!-- <app-table [data]="data" ></app-table> -->
+<!-- <ag-grid-angular
+style="width: 100%; height: 500px;"
+class="ag-theme-alpine"
+[rowData]="rowData"
+[columnDefs]="columnDefs"
+[defaultColDef]="{ sortable: true, filter: true }"
+>
+</ag-grid-angular> -->
+  
+
+<div class="container pt-2">
+  <form>      
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort >
+    
+        <!-- <ng-container matColumnDef="State">
+          <th mat-header-cell class="custom-header-cell" *matHeaderCellDef>
+            <mat-form-field appearance="standard">
+              <mat-label class="custom-header-cell">Estado</mat-label>
+              <input matInput (keyup)="applyColumnFilter($event, 'State')" placeholder="Filtrar por estado">
+            </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.State}} </td>
+        </ng-container> -->
+    
+        <!-- <ng-container matColumnDef="Diio">
+          <th mat-header-cell class="custom-header-cell" *matHeaderCellDef>
+            <mat-form-field appearance="standard">
+              <mat-label class="custom-header-cell">Diio</mat-label>
+              <input matInput (keyup)="applyColumnFilter($event, 'Diio')" placeholder="Filtrar por diio">
+            </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.Diio}} </td>
+        </ng-container> -->
+
+        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+          <th mat-header-cell *matHeaderCellDef class="custom-header-cell">
+            <mat-form-field appearance="standard">
+              <mat-label class="custom-header-cell">{{column}}</mat-label>
+              <input matInput (keyup)="applyColumnFilter($event, column)" placeholder="Filtrar por {{column}}">
+            </mat-form-field>
+          </th>
+          <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    
+      <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 15, 30, 60]" showFirstLastButtons></mat-paginator>
+    </div>
+  </form>
+</div>
+  
