--- a/plataformaGestionPredial/src/app/shared/mat-table/mat-table.component.html
+++ b/plataformaGestionPredial/src/app/shared/mat-table/mat-table.component.html
@@ -6,21 +6,21 @@
             <table mat-table [dataSource]="dataSource" matSort >
       
               <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-                <th mat-header-cell *matHeaderCellDef class="custom-header-cell">
-                  <mat-form-field appearance="standard">
-                    <mat-label class="custom-header-cell">{{column}}</mat-label>
-                    <input matInput (keyup)="applyColumnFilter($event, column)" placeholder="Filtrar por {{column}}">
-                  </mat-form-field>
+                <th mat-header-cell *matHeaderCellDef >
+                  <div class="label-container">
+                    <mat-label mat-sort-header >{{column}}</mat-label>
+                    <mat-form-field appearance="standard">
+                      <input matInput (keyup)="applyColumnFilter($event, column)" placeholder="Filter by {{column}}">
+                    </mat-form-field>
+                  </div>
                 </th>
                 <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
               </ng-container>
-          
               <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
           
             <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 15, 30, 60]" showFirstLastButtons></mat-paginator>
-            <!-- <mat-paginator></mat-paginator> -->
           </div>
         </form>
     </div>
