--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -132,7 +132,7 @@
 <div *ngIf="menus[1].open" class="row submenu">
     <ul>
         <li id="11"(click)="addClass(11)"><i class="fa-solid fa-syringe"></i>Medicaments<span class="badge badge-secondary">PRO</span></li>
-       <li id="12"(click)="addClass(12)"><i class="fa-solid fa-screwdriver-wrench"></i>Carpentry<span class="badge badge-secondary">PRO</span></li>
+       <li id="12"(click)="addClass(12)"><i class="fa-solid fa-screwdriver-wrench"></i>Tools<span class="badge badge-secondary">PRO</span></li>
     </ul>
 </div>
 
