--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -6,7 +6,7 @@
     <div class="modal-body">
         <img style="cursor: pointer; height:100vh;" (click)="modal.close('Close click');"
                 width="100%"
-                [src]="'http://localhost:8006/images/bovines/'+bovine"
+                [src]="bovine!=0?url_bovine:url_bovine_local"
               />
     </div>
     <div class="modal-footer">
@@ -123,7 +123,7 @@
                             </div>
                             <div *ngIf="field.type=='file'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <div *ngIf="field.value!='' && field.name.includes('image')" class="mb-2"><label>Selected image: </label><br>
-                                    <img [src]="srcPreview" id="preview-{{field.name}}" alt="" width="100" height="100"><br>
+                                    <img [src]="srcPreview" id="preview-{{field.name}}" alt="" width="100" height="100" (click)="openFullscreen(content,0);"><br>
                                     <div *ngIf="icon">
                                         <i class="fa-solid fa-circle-info"></i>&nbsp;
                                         <label>Selected image will replace the current image</label>
