--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -169,7 +169,7 @@
         <i class="fa-solid fa-arrow-right-from-bracket"></i>
     </div>
     <div class="col-9">
-        <a href="logout" (click)="logout();" class="nav-link" >Exit<span class="badge badge-secondary"></span></a>
+        <a (click)="logout();" class="nav-link" >Exit<span class="badge badge-secondary"></span></a>
     </div>
 </div>
 
