--- a/plataformaGestionPredial/src/app/shared/carousel/carousel.component.html
+++ b/plataformaGestionPredial/src/app/shared/carousel/carousel.component.html
@@ -3,7 +3,7 @@
   <ngb-carousel *ngIf="images">
 	<ng-template ngbSlide>
 		<div class="picsum-img-wrapper">
-			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/old/'+idBovine" (click)="clickImagen($event,idBovine)"/>
+			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/young/'+idBovine" (click)="clickImagen($event,idBovine)"/>
 		</div>
 		<div class="carousel-caption">
 			<!-- <h3>First slide label</h3>
@@ -12,7 +12,7 @@
 	</ng-template>
 	<ng-template ngbSlide>
 		<div class="picsum-img-wrapper">
-			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/1'" />
+			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/old/'+idBovine" />
 		</div>
 		<div class="carousel-caption">
 			<!-- <h3>Second slide label</h3>
