Corrección despliegue imagen young

--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -123,7 +123,7 @@
                             </div>
                             <div *ngIf="field.type=='file'" [ngClass]="field.full==false ? 'form-group mb-2 col-6' : 'form-group mb-2'">
                                 <div *ngIf="field.value!='' && field.name.includes('image')" class="mb-2"><label>Selected image: </label><br>
-                                    <img [src]="srcPreview" id="preview-{{field.name}}" alt="" width="100" height="100" (click)="openFullscreen(content,0,field.name);"><br>
+                                    <img [src]="srcPreview" id="preview-{{field.name}}" alt="" width="100" height="100" (click)="openFullscreen(content,0,field.name,srcPreview);"><br>
                                     <div *ngIf="icon">
                                         <i class="fa-solid fa-circle-info"></i>&nbsp;
                                         <label>Selected image will replace the current image</label>
@@ -148,7 +148,7 @@
                             </div>
                             <div *ngIf="field.type=='image' && field.id>0" [ngClass]="field.full==false ? 'form-group mb-1 col-6' : 'form-group mb-2'">
                                 <label for="{{field.name}}">{{field.text}}<span *ngIf="field.required"> *</span></label><br>
-                                    <img src="{{field.url}}" (click)="openFullscreen(content,field.id,null);" >
+                                    <img src="{{field.url}}" width="100" height="100" (click)="openFullscreen(content,field.id,null,field.url);" >
                                 <p>{{field.info}}</p>
                             </div>
                             <!-- {{f.valid|json}} -->
