--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -123,7 +123,7 @@
                       <img
                         width="50px"
                         height="50px"
-                        [src]="'http://localhost:8006/images/bovines/old/'+country.id"
+                        [src]="country.mainImage==1?'http://localhost:8006/images/bovines/young/'+country.id:'http://localhost:8006/images/bovines/old/'+country.id"
                         (click)="openFullscreen(content,country.id, country.name);"
                         style="cursor:pointer"
                       />
