Se corrige listado en pdf

--- a/plataformaGestionPredial/src/app/shared/carousel/carousel.component.html
+++ b/plataformaGestionPredial/src/app/shared/carousel/carousel.component.html
@@ -6,8 +6,8 @@
 			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/young/'+idBovine" (click)="clickImagen($event,idBovine)"/>
 		</div>
 		<div class="carousel-caption">
-			<!-- <h3>First slide label</h3>
-			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
+			<h2 style="color: gold;">Image young</h2>
+			<!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
 		</div>
 	</ng-template>
 	<ng-template ngbSlide>
@@ -15,8 +15,8 @@
 			<img style="cursor: pointer; height:100vh;width: 100%;" [src]="'http://localhost:8006/images/bovines/old/'+idBovine" (click)="clickImagen($event,idBovine)"/>
 		</div>
 		<div class="carousel-caption">
-			<!-- <h3>Second slide label</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
+			<h2 style="color: gold;">Image old</h2>
+			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
 		</div>
 	</ng-template>
 	<!-- <ng-template ngbSlide>
