--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -27,7 +27,7 @@
                     <div style="float: right;margin-right:10%;"><img style="cursor: pointer;" (click)="modal.close('Close click');" (click)="editBovine(item.id);"
                       width="50px"
                       height="50px"
-                      [src]="'http://localhost:8006/images/bovines/old/'+item.id"
+                      [src]="item.mainImage==1?'http://localhost:8006/images/bovines/young/'+item.id:'http://localhost:8006/images/bovines/old/'+item.id"
                     /></div>
                   </div>
                 </li>
